--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@stencil/core": "^1.9.0-16",
+    "@stencil/core": "^1.9.0-18",
     "@types/jest": "24.0.25",
     "@types/puppeteer": "1.19.0",
     "jest": "24.9.0",
@@ -32,5 +32,8 @@
     "npm-run-all": "^4.1.5",
     "puppeteer": "2.1.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mf-components": "0.0.2"
+  }
 }
